# pytest-fileregress

./: LICENSE  README.md  pyproject.toml
src/devtools/: data_generator.py  original.py
src/pytest_fileregress/: __init__.py  __main__.py  plugin.py
tests/: __init__.py  test_plugin.py
